Thu Jun 18 01:35:51 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_cmp): Infinity is greater than any bignum
	  number.  [ruby-dev:38672]

	* bignum.c (rb_big_cmp): ditto.

Thu Jun 18 01:29:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): drive letter is ascii only.
	  [ruby-dev:38612]

Wed Jun 17 23:46:08 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_coerce): accepts Complex when the imag is
	  exact zero.

Wed Jun 17 16:57:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* load.c (rb_f_require): RDoc updated.  a patch from Run Paint Run
	  Run in [ruby-core:23833].

	* load.c (rb_mod_autoload): ditto.  [ruby-core:23835]

Wed Jun 17 12:37:37 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (ruby_thread_stack_overflow): call rb_exc_raise() on
	  stack overflows in the signal handler, if sigaltstack is
	  available.  On stack overflow (and with sigaltstack), the signal
	  handler is more likely to have room to create an exception
	  object.  [ruby-core:23813]

Wed Jun 17 08:14:01 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_coerce): accepts Complex instances.

	* rational.c (nurat_coerce): accepts Rational
	  instances. [ruby-core:23859]

Wed Jun 17 07:36:22 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httputils.rb (parse_form_data): escape boundary of
	  multipart/form-data when embed in regexp.

Tue Jun 16 22:47:37 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (fptr_finalize): skip close(2) for fd 0,1,2.

Wed Jun 17 00:31:30 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_argf.rb (TestArgf#test_skip): updated test
	  according to clarified behavior.

Tue Jun 16 06:40:31 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_skip): should close only when current_file is available.

Mon Jun 15 22:35:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_big2db): (-Float::MAX.to_i*2).to_f should return